@@ -1,3 +1,7 @@
+23/07/2018:
+	- Fixed incorrect big endian TIFF file signature.
+
+
 27/04/2018:
 	- Updates to Windows build files: removed Kakadu dependencies.
 	- Added version check for snprintf Windows redefinition as this is now
